# tracker

./: .gitignore  LICENSE  README.md  docker-compose.yml
notebooks/: dicom_processor.ipynb
precision-api/: Dockerfile  package-lock.json  package.json  tsconfig.json
precision-api/src/: app.module.ts  main.ts  stream.ts  tracker.ts
precision-digitizer/: Dockerfile  README.md  digitize.py  pyproject.toml
precision-streamer/: Dockerfile
precision-viewer/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
precision-viewer/src/: index.html
precision-viewer/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  tracker.service.ts
