[project]
name = "precision-digitizer"
version = "0.1.0"
description = "Raw file/stream digitizer for precision pathways"
authors = [
    {name = "Precision Pathways",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "vtk (>=9.4.2,<10.0.0)",
    "pydicom (>=3.0.1,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
